test/files/neg/t4064.scala
class Foo[T](v: T) {}

object Test {
 new Foo[Boolean](Boolean.FALSE)
}